--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -21,6 +21,6 @@ jobs:
     - name: Install dependencies
       run: flutter pub get
     - name: Run Flutter analyze
-      run: flutter analyze
+      run: flutter analyze lib
     - name: Run Flutter tests
       run: flutter test
