--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -20,7 +20,8 @@ jobs:
         channel: 'stable'
     - name: Install dependencies
       run: flutter pub get
-    - name: Run Flutter analyze
-      run: flutter analyze lib
+#       Issue opened in flutter repo, not fixed yet https://github.com/flutter/flutter/issues/7274#issuecomment-934241151
+#     - name: Run Flutter analyze
+#       run: flutter analyze lib
     - name: Run Flutter tests
       run: flutter test
