--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   
   dart_log: ^1.1.1
-  equatable: ^2.0.3
+  equatable: 2.0.3
 
 dev_dependencies:
   flutter_test:
