--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,10 +2,25 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "example",
+            "name": "example Android",
             "request": "launch",
             "type": "dart",
-            "program": "example/example_host/lib/main.dart"
+            "program": "example/example_host/lib/main.dart",
+            "args": [
+                "-d",
+                "emulator-5554"
+            ]
+        },
+        {
+            "name": "fma_devtools_extension(simulated environment)",
+            "cwd": "fma_devtools_extension",
+            "request": "launch",
+            "type": "dart",
+            "args": [
+                "--dart-define=use_simulated_environment=true",
+                "-d",
+                "chrome"
+            ],   
         }
     ]
 }
