fix: extension not available on devtools

--- a/extension/devtools/config.yaml
+++ b/extension/devtools/config.yaml
@@ -1,4 +1,4 @@
-name: Flutter Micro App
+name: flutter_micro_app
 issueTracker: https://github.com/emanuel-braz/flutter_micro_app/issues
-version: 0.0.1
+version: 0.0.2
 materialIconCodePoint: '0xf03b6'
