--- a/packages/fma_go_router/pubspec.yaml
+++ b/packages/fma_go_router/pubspec.yaml
@@ -1,7 +1,7 @@
 name: fma_go_router
-description: "A new Flutter package project."
+description: "Plugin for Flutter Micro App with Go Router"
 version: 0.1.0
-homepage: https://github.com/emanuel-braz/flutter_micro_app
+homepage: https://github.com/emanuel-braz/flutter_micro_app/packages/fma_go_router
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
@@ -17,3 +17,5 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+
+flutter:
