--- a/fma_devtools_extension/pubspec.yaml
+++ b/fma_devtools_extension/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   devtools_extensions: ^0.2.2
   excel: ^4.0.6
+  flutter_micro_app: '>=1.0.0 <2.0.0'
 
 dev_dependencies:
   flutter_test:
