--- a/packages/fma_go_router/pubspec.yaml
+++ b/packages/fma_go_router/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fma_go_router
-description: "Plugin for Flutter Micro App with Go Router integration"
-version: 0.1.0
+description: "Plugin for Flutter Micro App package with Go Router integration"
+version: 0.2.0
 homepage: https://github.com/emanuel-braz/flutter_micro_app/packages/fma_go_router
 
 environment:
@@ -10,11 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_micro_app: '>=1.0.0 <2.0.0'
+  flutter_micro_app: '>=1.1.0 <2.0.0'
   go_router: ^14.2.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-  
