feat: update devtools when needed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,25 @@
 {
     "dart.lineLength": 80,
-    "dart.flutterSdkPath": "/Users/eb/.puro/envs/v3_16_5/flutter",
-    "dart.sdkPath": "/Users/eb/.puro/envs/v3_16_5/flutter/bin/cache/dart-sdk"
+    "dart.flutterSdkPath": "/Users/eb/.puro/envs/3.24.1/flutter",
+    "dart.sdkPath": "/Users/eb/.puro/envs/3.24.1/flutter/bin/cache/dart-sdk",
+    "workbench.colorCustomizations": {
+        "activityBar.activeBackground": "#1f6fd0",
+        "activityBar.background": "#1f6fd0",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#ee90bb",
+        "activityBarBadge.foreground": "#15202b",
+        "commandCenter.border": "#e7e7e799",
+        "sash.hoverBorder": "#1f6fd0",
+        "statusBar.background": "#1857a4",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#1f6fd0",
+        "statusBarItem.remoteBackground": "#1857a4",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#1857a4",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#1857a499",
+        "titleBar.inactiveForeground": "#e7e7e799"
+    },
+    "peacock.color": "#1857a4"
 }
